--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -67,4 +67,42 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
+
+.o-wrap {
+  max-width: 700px;
+  margin: 0 auto;
+}
+
+.c-general {
+  background-color: plum;
+}
+
+.c-educational {
+  background-color: royalblue;
+}
+
+.c-practical {
+  background-color: aquamarine;
+}
+
+.c-general__title, .c-educational__title, .c-practical__title {
+  font-size: 24px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.c-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.c-form__group {
+  margin-bottom: 10px;
+}
 /*# sourceMappingURL=main.css.map */
