--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -27,11 +27,11 @@ code {
 
 .o-wrap { max-width: 700px; margin: 0 auto; }
 
-.c-general { background-color: plum; }
-.c-educational { background-color: royalblue; }
-.c-practical { background-color: aquamarine; }
+#c-general { background-color: plum; }
+#c-educational { background-color: royalblue; }
+#c-practical { background-color: aquamarine; }
 
 .c-general__title, .c-educational__title, .c-practical__title { font-size: $font-size-medium; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; }
 
 .c-form { display: flex; flex-direction: column; }
-.c-form__group { margin-bottom: $vspace/2; }
+.c-form__content__group { margin-bottom: $vspace/2; }
