--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,10 +4,14 @@ $hspace: 20px;
 $vspace: 20px;
 
 $font-size: 16px;
-$font-size-small: 14px;
-$font-size-medium: 24px;
+$font-size-small: 12px;
+$font-size-medium: 20px;
 $font-size-large: 32px;
 $font-size-xlarge: 40px;
+
+$color-bg: #232323;
+$color-highlight: #fc5d28;
+$color-font: #bcbcbc;
 
 * { box-sizing: border-box; }
 
@@ -25,13 +29,52 @@ code {
     monospace;
 }
 
-.o-wrap { max-width: 700px; margin: 0 auto; }
+.u-offset { margin-left: -$hspace*2; margin-right: -$hspace*2; }
+.u-border { margin-bottom: $vspace*2; padding-left: $hspace; border-left: 2px solid $color-font; }
 
 #c-general { background-color: plum; }
 #c-educational { background-color: royalblue; }
 #c-practical { background-color: aquamarine; }
 
-.c-general__title, .c-educational__title, .c-practical__title { font-size: $font-size-medium; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; }
+.c-app { display: flex; flex-direction: row; justify-content: space-between; max-width: 1400px; margin: 0 auto; }
 
-.c-form { display: flex; flex-direction: column; }
+.c-general__title,
+.c-educational__title,
+.c-practical__title { font-size: $font-size-medium; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; }
+
+.c-form { display: flex; flex-direction: column; width: 450px; margin-right: $hspace*2; }
 .c-form__content__group { margin-bottom: $vspace/2; }
+
+.c-view { position: relative; max-width: 900px; height: 100vh; padding: $vspace*4 $hspace*4 $vspace*3; background-color: $color-bg; color: $color-font; font-size: $font-size-small; }
+.c-view::before { position: absolute; content: ''; width: 80px; height: 80px; top: 0; left: 0; background-color: $color-highlight; }
+.c-view::after { position: absolute; content: ''; width: 40px; height: 40px; bottom: 0; right: 0; background-color: $color-highlight; }
+.c-view__header { width: 100%; height: 200px; margin-bottom: $vspace*3; }
+.c-view__header__img { display: inline-block; width: 150px; height: 100%; border: 2px solid $color-font; vertical-align: bottom; margin-right: $hspace;
+  img { width: 100%; height: 100%; }
+}
+.c-view__header__teaser { display: inline-block;
+  p { margin-top: $vspace/2; }
+}
+.c-view__content { display: flex; width: 100%;
+  h2 { margin-bottom: $vspace; font-size: $font-size-medium; font-weight: bold; letter-spacing: 2px; }
+}
+.c-view__content__left, .c-view__content__right { display: inline-block; width: calc(50% - #{$hspace}*4); margin: 0 $hspace*2; }
+
+.c-view__content__left__general,
+.c-view__content__right__practical,
+.c-view__content__left__educational { position: relative; }
+
+.c-view__content__left__general::before,
+.c-view__content__right__practical::before,
+.c-view__content__left__educational::before { position: absolute; content: ''; top: 20px; left: -12px; width: 10px; height: 10px; border: 6px solid $color-bg; border-radius: 50%; background-color: $color-highlight; z-index: 2; }
+
+.c-view__content__left__general__item,
+.c-view__content__right__practical__section__item,
+.c-view__content__left__educational__section__item { display: flex; margin-bottom: $vspace/2;
+  h3 { width: 40%; font-weight: bold; }
+  p { flex: 1; }
+}
+
+
+
+// TODO: mediaqueries, change flex direction and container width
