--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -80,15 +80,11 @@ code {
 }
 
 #c-general {
-  background-color: plum;
+  margin-bottom: 40px;
 }
 
 #c-educational {
-  background-color: royalblue;
-}
-
-#c-practical {
-  background-color: aquamarine;
+  margin-bottom: 40px;
 }
 
 .c-app {
@@ -106,13 +102,46 @@ code {
   margin: 0 auto;
 }
 
+.c-btn {
+  margin-right: 20px;
+  margin-bottom: 10px;
+  padding: 5px 10px;
+  border: 1px solid #232323;
+  border-radius: 3px;
+}
+
+.c-btn:hover {
+  cursor: pointer;
+}
+
 .c-general__title,
 .c-educational__title,
 .c-practical__title {
+  margin-bottom: 20px;
   font-size: 20px;
   font-weight: bold;
   letter-spacing: 2px;
   text-transform: uppercase;
+}
+
+.c-educational__addBtn,
+.c-practical__addBtn {
+  background-color: #232323;
+  color: #fff;
+}
+
+.c-form__group__submitBtn {
+  padding: 10px 20px;
+  background-color: #fc5d28;
+  color: #fff;
+  font-weight: bold;
+}
+
+.c-form__group__clearBtn {
+  padding: 10px 20px;
+  background-color: #f9435e;
+  color: #fff;
+  font-weight: bold;
 }
 
 .c-form {
@@ -123,12 +152,49 @@ code {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 450px;
+  max-width: 550px;
   margin-right: 40px;
+  margin-bottom: 60px;
+  padding: 20px 20px;
+  border: 1px solid #232323;
+  background-color: #ededed;
+}
+
+.c-form__content {
+  margin-bottom: 20px;
+  padding: 10px 10px;
+  border: 1px solid #232323;
 }
 
 .c-form__content__group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   margin-bottom: 10px;
+}
+
+.c-form__content__group label {
+  width: 33%;
+  font-weight: bold;
+}
+
+.c-form__content__group input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.c-form__content__group input[type='date'] {
+  margin-right: 10px;
+}
+
+.c-form__content__group textarea {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .c-view {
@@ -230,6 +296,11 @@ code {
   z-index: 2;
 }
 
+.c-view__content__right__practical__section,
+.c-view__content__left__educational__section {
+  margin-bottom: 40px;
+}
+
 .c-view__content__left__general__item,
 .c-view__content__right__practical__section__item,
 .c-view__content__left__educational__section__item {
@@ -252,5 +323,75 @@ code {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+@media screen and (max-width: 1280px) {
+  .c-app {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .c-form, .c-view {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+@media screen and (max-width: 850px) {
+  .c-view {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .c-view__content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .c-view__content__left, .c-view__content__right {
+    width: calc(100% - 80px);
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .c-form {
+    margin-left: 20px;
+    margin-right: 20px;
+  }
+  .c-form__content__group {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .c-form__content__group label {
+    width: 100%;
+    margin-bottom: 5px;
+  }
+  .c-form__content__group input {
+    width: 100%;
+  }
+  .c-form__content__group input[type='date'] {
+    width: 100%;
+    margin-right: 0;
+  }
+  .c-form__content__group textarea {
+    width: 100%;
+  }
+  .c-view {
+    padding: 40px 40px;
+  }
+  .c-view::before {
+    width: 40px;
+    height: 40px;
+  }
+  .c-view::after {
+    width: 20px;
+    height: 20px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
