--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,7 +9,8 @@ $font-size-medium: 20px;
 $font-size-large: 32px;
 $font-size-xlarge: 40px;
 
-$color-bg: #232323;
+$color-bg-view: #232323;
+$color-bg-form: #ededed;
 $color-highlight: #fc5d28;
 $color-font: #bcbcbc;
 
@@ -32,20 +33,36 @@ code {
 .u-offset { margin-left: -$hspace*2; margin-right: -$hspace*2; }
 .u-border { margin-bottom: $vspace*2; padding-left: $hspace; border-left: 2px solid $color-font; }
 
-#c-general { background-color: plum; }
-#c-educational { background-color: royalblue; }
-#c-practical { background-color: aquamarine; }
+#c-general { margin-bottom: $vspace*2; }
+#c-educational { margin-bottom: $vspace*2; }
+// #c-practical {}
 
 .c-app { display: flex; flex-direction: row; justify-content: space-between; max-width: 1400px; margin: 0 auto; }
 
+.c-btn { margin-right: $hspace; margin-bottom: $vspace/2; padding: $vspace/4 $hspace/2; border: 1px solid $color-bg-view; border-radius: 3px;
+  &:hover { cursor: pointer; }
+}
+
 .c-general__title,
 .c-educational__title,
-.c-practical__title { font-size: $font-size-medium; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; }
+.c-practical__title { margin-bottom: $vspace; font-size: $font-size-medium; font-weight: bold; letter-spacing: 2px; text-transform: uppercase; }
 
-.c-form { display: flex; flex-direction: column; width: 450px; margin-right: $hspace*2; }
-.c-form__content__group { margin-bottom: $vspace/2; }
+.c-educational__addBtn,
+.c-practical__addBtn { background-color: $color-bg-view; color: #fff; }
 
-.c-view { position: relative; max-width: 900px; height: 100vh; padding: $vspace*4 $hspace*4 $vspace*3; background-color: $color-bg; color: $color-font; font-size: $font-size-small; }
+.c-form__group__submitBtn { padding: $vspace/2 $hspace; background-color: $color-highlight; color: #fff; font-weight: bold; }
+.c-form__group__clearBtn { padding: $vspace/2 $hspace; background-color: #f9435e; color: #fff; font-weight: bold; }
+
+.c-form { display: flex; flex-direction: column; max-width: 550px; margin-right: $hspace*2; margin-bottom: $vspace*3; padding: $vspace $hspace; border: 1px solid $color-bg-view; background-color: $color-bg-form; }
+.c-form__content { margin-bottom: $vspace; padding: $vspace/2 $hspace/2; border: 1px solid $color-bg-view; }
+.c-form__content__group { display: flex; align-items: center; margin-bottom: $vspace/2;
+  label { width: 33%; font-weight: bold; }
+  input { flex: 1; }
+  input[type='date'] { margin-right: $hspace/2; }
+  textarea { flex: 1; }
+}
+
+.c-view { position: relative; max-width: 900px; height: 100vh; padding: $vspace*4 $hspace*4 $vspace*3; background-color: $color-bg-view; color: $color-font; font-size: $font-size-small; }
 .c-view::before { position: absolute; content: ''; width: 80px; height: 80px; top: 0; left: 0; background-color: $color-highlight; }
 .c-view::after { position: absolute; content: ''; width: 40px; height: 40px; bottom: 0; right: 0; background-color: $color-highlight; }
 .c-view__header { width: 100%; height: 200px; margin-bottom: $vspace*3; }
@@ -66,7 +83,10 @@ code {
 
 .c-view__content__left__general::before,
 .c-view__content__right__practical::before,
-.c-view__content__left__educational::before { position: absolute; content: ''; top: 20px; left: -12px; width: 10px; height: 10px; border: 6px solid $color-bg; border-radius: 50%; background-color: $color-highlight; z-index: 2; }
+.c-view__content__left__educational::before { position: absolute; content: ''; top: 20px; left: -12px; width: 10px; height: 10px; border: 6px solid $color-bg-view; border-radius: 50%; background-color: $color-highlight; z-index: 2; }
+
+.c-view__content__right__practical__section,
+.c-view__content__left__educational__section { margin-bottom: $vspace*2; }
 
 .c-view__content__left__general__item,
 .c-view__content__right__practical__section__item,
@@ -75,6 +95,33 @@ code {
   p { flex: 1; }
 }
 
-
-
 // TODO: mediaqueries, change flex direction and container width
+@media screen and (max-width: 1280px)  {
+  .c-app { flex-direction: column; }
+
+  .c-form, .c-view { margin-left: auto; margin-right: auto; }
+}
+
+@media screen and (max-width: 850px) {
+  .c-view { margin-left: $hspace; margin-right: $hspace; }
+}
+
+@media screen and (max-width: 750px) {
+
+  .c-view__content{ flex-direction: column; }
+  .c-view__content__left, .c-view__content__right { width: calc(100% - #{$hspace*4}); }
+}
+
+@media screen and (max-width: 600px) {
+  .c-form { margin-left: $hspace; margin-right: $hspace; }
+  .c-form__content__group { flex-direction: column;
+    label { width: 100%; margin-bottom: $vspace/4; }
+    input { width: 100%; }
+    input[type='date'] { width: 100%; margin-right: 0; }
+    textarea { width: 100%; }
+  }
+
+  .c-view { padding: $vspace*2 $hspace*2; }
+  .c-view::before { width: 40px; height: 40px; }
+  .c-view::after { width: 20px; height: 20px; }
+}
