--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -62,7 +62,7 @@ code {
   textarea { flex: 1; }
 }
 
-.c-view { position: relative; max-width: 900px; height: 100vh; padding: $vspace*4 $hspace*4 $vspace*3; background-color: $color-bg-view; color: $color-font; font-size: $font-size-small; }
+.c-view { position: relative; max-width: 900px; min-height: 100vh; padding: $vspace*4 $hspace*4 $vspace*3; background-color: $color-bg-view; color: $color-font; font-size: $font-size-small; }
 .c-view::before { position: absolute; content: ''; width: 80px; height: 80px; top: 0; left: 0; background-color: $color-highlight; }
 .c-view::after { position: absolute; content: ''; width: 40px; height: 40px; bottom: 0; right: 0; background-color: $color-highlight; }
 .c-view__header { width: 100%; height: 200px; margin-bottom: $vspace*3; }
