--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -158,13 +158,14 @@ code {
 }
 
 .c-form__content__group {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
 
 .c-form__content__group label {
@@ -186,6 +187,41 @@ code {
   -webkit-box-flex: 1;
       -ms-flex: 1;
           flex: 1;
+}
+
+.c-form__content__group__error {
+  position: absolute;
+  left: 33%;
+  bottom: -15px;
+  font-size: 10px;
+  color: #f9435e;
+  visibility: hidden;
+}
+
+.c-form__content__group__error.is-invalid {
+  visibility: visible;
+}
+
+.c-form__content__group--range {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.c-form__content__group--range .c-form__content__group__error {
+  bottom: 0;
+}
+
+.c-form__content__group__date {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .c-view {
@@ -371,6 +407,15 @@ code {
   }
   .c-form__content__group textarea {
     width: 100%;
+  }
+  .c-form__content__group__date {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .c-form__content__group__error {
+    left: 0;
   }
   .c-view {
     padding: 40px 40px;
